--- a/TODO
+++ b/TODO
@@ -1,6 +1,14 @@
 Почему-то мне хочется использовать для решения подобной задачи какую-нибудь байесовскую модель.
-на входе у нас есть некое априорное представление о командах (какой-то вектор фич). А есть настоящее скрытое состояние. в дальнейшем это скрытое состояние должно меняться от матча к матчу. 
-Т.е. у нас имеется временной ряд. Результаты каждого следующего матча зависят от результатов предыдущего. Типа марковской цепи. Т.е. если команда победила в предыдущем матче, то вероятность победы в будущем возрастает. 
+на входе у нас есть некое априорное представление о командах (какой-то вектор фич). 
+А есть настоящее скрытое состояние. в дальнейшем это скрытое состояние должно меняться от матча к матчу. 
+Т.е. у нас имеется временной ряд. Результаты каждого следующего матча зависят от результатов предыдущего. 
+Типа марковской цепи. Т.е. если команда победила в предыдущем матче, то вероятность победы в будущем возрастает. 
 Возможно рекуррентную нейронку можно прикрутить к такой модели.
 Да, и модель должна быть (имхо) симметричной онтосительно команд. т. е. когда А играет с B или B играет с A.
-на первом этапе можно просто построить классификатор который по данной таблице покажет какая их двух команд выиграет в данном конкретном матче. 
+на первом этапе можно просто построить классификатор который по данной таблице покажет 
+какая их двух команд выиграет в данном конкретном матче. 
+
+Можно использовать:
+- Одну из байесовских моделей
+- Марковскую цепь
+- Рекурентную нейросеть
